--- a/kustomization/test/argo-proj/kustomization.yml
+++ b/kustomization/test/argo-proj/kustomization.yml
@@ -8,5 +8,6 @@ patchesStrategicMerge:
   - application/patchesStrategicMerge/argo-cd.yml
   - application/patchesStrategicMerge/argo-proj.yml
   - application/patchesStrategicMerge/longhorn.yml
+  - application/patchesStrategicMerge/phpmyadmin.yml
   - application/patchesStrategicMerge/purelb.yml
   - application/patchesStrategicMerge/traefik.yml
