Attempt to run ara with its own mariadb cluster
This is a little hard to test because I'm relying on argo-cd to install
mariadb-galera.

--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -4,6 +4,7 @@ kind: Kustomization
 
 resources:
   - project.yml
+  - application/ara.yml
   - application/argo-cd.yml
   - application/argo-proj.yml
   - application/calico.yml
