--- a/kustomization/test/argo-proj/kustomization.yml
+++ b/kustomization/test/argo-proj/kustomization.yml
@@ -4,6 +4,11 @@ kind: Kustomization
 
 bases:
   - ../../base/argo-proj
+patchesJson6902:
+  - path: application/patchesJson6902/add_ara_source.yml
+    target:
+      kind: Application
+      name: ara
 patchesStrategicMerge:
   - application/patchesStrategicMerge/argo-cd.yml
   - application/patchesStrategicMerge/argo-proj.yml
