--- a/plays/test-k8s-cluster.yml
+++ b/plays/test-k8s-cluster.yml
@@ -2,7 +2,37 @@
 - hosts: localhost
   gather_facts: false
   tasks:
-    # Internal services
+    - name: Create namespace for secret
+      kubernetes.core.k8s:
+        context: "{{ cluster }}"
+        state: present
+        resource_definition:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: "{{ secret.namespace }}"
+      loop: "{{ secrets }}"
+      loop_control:
+        label: "{{ secret.namespace }}"
+        loop_var: secret
+    - name: Create secret
+      kubernetes.core.k8s:
+        apply: yes
+        context: "{{ cluster }}"
+        resource_definition:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: "{{ secret.name }}"
+            namespace: "{{ secret.namespace }}"
+          stringData: "{{ secret.stringData }}"
+          type: Opaque
+        state: present
+      loop: "{{ secrets }}"
+      loop_control:
+        label: "{{ secret.namespace }}/{{ secret.name }}"
+        loop_var: secret
+
     - ansible.builtin.import_tasks: k8s/cert-manager/tasks.yml
       tags:
         - cert-manager
@@ -28,3 +58,4 @@
   vars:
     # Right now, I only have the test cluster, but this will need to change in the future!
     cluster: default
+    secrets: "{{ hostvars[groups['kairos_test'] | first].secrets }}"
