move rabbitmq-cluster-operator to argo-cd

--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -14,5 +14,6 @@ resources:
   - application/minio.yml
   - application/phpmyadmin.yml
   - application/purelb.yml
+  - application/rabbitmq-cluster-operator.yml
   - application/tigera-operator.yml
   - application/traefik.yml
