setup cron job to remove old ara logs

--- a/kustomization/test/ara/kustomization.yml
+++ b/kustomization/test/ara/kustomization.yml
@@ -13,5 +13,9 @@ patchesJson6902:
     target:
       kind: IngressRoute
       name: ara-https-redirect-ingressroute
+  - path: add_address_in_job_env.yml
+    target:
+      kind: CronJob
+      name: prune-old-logs
 resources:
   - configmap.yml
