--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -13,6 +13,7 @@ resources:
   - application/mariadb-galera.yml
   - application/minio.yml
   - application/phpmyadmin.yml
+  - application/prometheus-operator.yml
   - application/purelb.yml
   - application/rabbitmq-cluster-operator.yml
   - application/tigera-operator.yml
