--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -216,6 +216,8 @@ bind_zones:
         ip: 10.10.0.151
       - name: test-phpmyadmin.hogs
         ip: 10.10.0.151
+      - name: test-prometheus.hogs
+        ip: 10.10.0.151
       - name: test-traefik.hogs
         ip: 10.10.0.151
 
