--- a/kustomization/base/vector/aggregator-values.yml
+++ b/kustomization/base/vector/aggregator-values.yml
@@ -1,3 +1,25 @@
 ---
 fullnameOverride: vector-aggregator
 role: Aggregator
+
+customConfig:
+  # API is enabled for the liveness probe.
+  api:
+    enabled: yes
+    address: 127.0.0.1:8686
+    playground: no
+  data_dir: /vector-data-dir
+  sinks:
+    prom_exporter:
+      address: 0.0.0.0:9090
+      inputs:
+        - internal_metrics
+        - vector
+      type: prometheus_exporter
+  sources:
+    internal_metrics:
+      type: internal_metrics
+    vector:
+      address: 0.0.0.0:6000
+      type: vector
+      version: "2"
