--- a/kustomization/base/traefik/deployment.yml
+++ b/kustomization/base/traefik/deployment.yml
@@ -19,15 +19,19 @@ spec:
         - name: traefik
           image: traefik
           args:
+            - --accesslog
             - --api.dashboard=true
             - --api.insecure=true
             - --entrypoints.web.address=:80
             - --entrypoints.websecure.address=:443
             - --global.checknewversion=false
+            - --metrics.datadog=true
+            - --metrics.datadog.address=vector-aggregator.vector.svc.cluster.local:8282
             - --providers.file.filename=/config/dynamic.toml
             - --providers.kubernetescrd
             - --providers.kubernetescrd.allowCrossNamespace=true
-            - --accesslog
+            - --tracing.datadog=true
+            - --tracing.datadog.localAgentHostPort=vector-aggregator.vector.svc.cluster.local:8282
           ports:
             - name: web
               containerPort: 80
