dump datadog_agent to console for now to see what we are actually getting

--- a/kustomization/base/vector/aggregator-values.yml
+++ b/kustomization/base/vector/aggregator-values.yml
@@ -17,6 +17,12 @@ customConfig:
         - internal_metrics
         - vector
       type: prometheus_exporter
+    stdout:
+      encoding:
+        codec: json
+      inputs:
+        - datadog_agent
+      type: console
   sources:
     datadog_agent:
       address: 0.0.0.0:8282
