--- a/kustomization/test/phpmyadmin/kustomization.yml
+++ b/kustomization/test/phpmyadmin/kustomization.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+resources:
   - ../../base/phpmyadmin
 patchesJson6902:
   - path: change_ingressroute_host.yml
