--- a/kustomization/test/traefik/kustomization.yml
+++ b/kustomization/test/traefik/kustomization.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+resources:
   - ../../base/traefik
 patchesJson6902:
   - path: set_debug_log_level.yml
