--- a/kustomization/test/unifi/kustomization.yml
+++ b/kustomization/test/unifi/kustomization.yml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+resources:
   - ../../base/unifi
 # TODO: ingress, which possibly obsoletes the service defined in the base!
