--- a/kustomization/test/ara/kustomization.yml
+++ b/kustomization/test/ara/kustomization.yml
@@ -2,6 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+configMapGenerator:
+  - name: ara-settings-configmap
+    files:
+      - configmap/settings.yml
 resources:
   - ../../base/ara
 patchesJson6902:
