--- a/kustomization/test/ara/kustomization.yml
+++ b/kustomization/test/ara/kustomization.yml
@@ -3,9 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 configMapGenerator:
-  - name: ara-settings-configmap
+  - name: settings-configmap
     files:
       - configmap/settings.yml
+namespace: ara
 resources:
   - ../../base/ara
 patchesJson6902:
