fix type in docker package for renovate

--- a/kustomization/base/traefik/kustomization.yml
+++ b/kustomization/base/traefik/kustomization.yml
@@ -14,7 +14,7 @@ images:
     # renovate: datasource=github-releases depName=traefik/traefik
     newTag: v2.10.1
   - name: timberio/vector
-    # renovate: datasource=docker depName=timeberio/vector
+    # renovate: datasource=docker depName=timberio/vector
     newTag: 0.30.0-distroless-libc
 namespace: traefik
 resources:
