--- a/kustomization/overlays/test/argo-cd/kustomization.yml
+++ b/kustomization/overlays/test/argo-cd/kustomization.yml
@@ -3,14 +3,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/longhorn
-  - setting.yml
+  - ../../../base/argo-cd
 patchesJson6902:
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: longhorn-frontend-ingressroute
+      name: argocd-ingressroute
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: longhorn-frontend-https-redirect-ingressroute
+      name: argocd-https-redirect-ingressroute
