--- a/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/argo-proj.yml
+++ b/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/argo-proj.yml
@@ -2,8 +2,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: phpmyadmin
+  name: argo-proj
   namespace: argocd
 spec:
   source:
-    path: kustomization/test/phpmyadmin
+    path: kustomization/overlays/test/argo-proj
