--- a/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/phpmyadmin.yml
+++ b/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/phpmyadmin.yml
@@ -2,8 +2,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: traefik
+  name: phpmyadmin
   namespace: argocd
 spec:
   source:
-    path: kustomization/test/traefik
+    path: kustomization/overlays/test/phpmyadmin
