--- a/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/prometheus.yml
+++ b/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/prometheus.yml
@@ -2,8 +2,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: purelb
+  name: prometheus
   namespace: argocd
 spec:
   source:
-    path: kustomization/test/purelb
+    path: kustomization/overlays/test/prometheus
