--- a/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/traefik.yml
+++ b/kustomization/overlays/test/argo-proj/application/patchesStrategicMerge/traefik.yml
@@ -2,8 +2,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn
+  name: traefik
   namespace: argocd
 spec:
   source:
-    path: kustomization/test/longhorn
+    path: kustomization/overlays/test/traefik
