--- a/kustomization/overlays/test/argo-proj/kustomization.yml
+++ b/kustomization/overlays/test/argo-proj/kustomization.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/argo-proj
+  - ../../../base/argo-proj
 patchesJson6902:
   - path: application/patchesJson6902/add_ara_source.yml
     target:
