--- a/kustomization/overlays/test/longhorn/kustomization.yml
+++ b/kustomization/overlays/test/longhorn/kustomization.yml
@@ -3,13 +3,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/prometheus
+  - ../../../base/longhorn
+  - setting.yml
 patchesJson6902:
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: prometheus-ingressroute
+      name: longhorn-frontend-ingressroute
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: prometheus-https-redirect-ingressroute
+      name: longhorn-frontend-https-redirect-ingressroute
