--- a/kustomization/overlays/test/phpmyadmin/kustomization.yml
+++ b/kustomization/overlays/test/phpmyadmin/kustomization.yml
@@ -3,13 +3,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/argo-cd
+  - ../../../base/phpmyadmin
 patchesJson6902:
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: argocd-ingressroute
+      name: phpmyadmin-ingressroute
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: argocd-https-redirect-ingressroute
+      name: phpmyadmin-https-redirect-ingressroute
+  - path: set_pma_absolute_uri.yml
+    target:
+      kind: Deployment
+      name: phpmyadmin-deployment
