--- a/kustomization/overlays/test/prometheus/kustomization.yml
+++ b/kustomization/overlays/test/prometheus/kustomization.yml
@@ -3,17 +3,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/traefik
+  - ../../../base/prometheus
 patchesJson6902:
-  - path: set_debug_log_level.yml
-    target:
-      kind: Deployment
-      name: traefik-deployment
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: traefik-dashboard-ingressroute
+      name: prometheus-ingressroute
   - path: change_ingressroute_host.yml
     target:
       kind: IngressRoute
-      name: traefik-dashboard-https-redirect-ingressroute
+      name: prometheus-https-redirect-ingressroute
