--- a/kustomization/overlays/test/purelb/kustomization.yml
+++ b/kustomization/overlays/test/purelb/kustomization.yml
@@ -3,6 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/purelb
+  - ../../../base/purelb
 patchesStrategicMerge:
   - set_pool.yml
