--- a/kustomization/overlays/test/traefik/kustomization.yml
+++ b/kustomization/overlays/test/traefik/kustomization.yml
@@ -3,17 +3,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/phpmyadmin
+  - ../../../base/traefik
 patchesJson6902:
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: phpmyadmin-ingressroute
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: phpmyadmin-https-redirect-ingressroute
-  - path: set_pma_absolute_uri.yml
+  - path: set_debug_log_level.yml
     target:
       kind: Deployment
-      name: phpmyadmin-deployment
+      name: traefik-deployment
+  - path: change_ingressroute_host.yml
+    target:
+      kind: IngressRoute
+      name: traefik-dashboard-ingressroute
+  - path: change_ingressroute_host.yml
+    target:
+      kind: IngressRoute
+      name: traefik-dashboard-https-redirect-ingressroute
