--- a/kustomization/overlays/test/unifi/kustomization.yml
+++ b/kustomization/overlays/test/unifi/kustomization.yml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../base/unifi
+  - ../../../base/unifi
 # TODO: ingress, which possibly obsoletes the service defined in the base!
