--- a/kustomization/base/cert-manager/kustomization.yml
+++ b/kustomization/base/cert-manager/kustomization.yml
@@ -2,14 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+patches:
+  - path: patches/add_dns01_recursive_nameservers.yml
+    target:
+      kind: Deployment
+      name: cert-manager
+  - path: patches/increase_replicas.yml
 resources:
   # renovate: datasource=github-releases
   - https://github.com/cert-manager/cert-manager/releases/download/v1.12.1/cert-manager.yaml
   - clusterissuer.yml
-patchesJson6902:
-  - path: add_dns01_recursive_nameservers.yml
-    target:
-      kind: Deployment
-      name: cert-manager
-patchesStrategicMerge:
-  - increase_replicas.yml
