--- a/kustomization/base/cert-manager/kustomization.yml
+++ b/kustomization/base/cert-manager/kustomization.yml
@@ -2,11 +2,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+configMapGenerator:
+  - name: vector-config
+    files:
+      - configmap/vector.yml
+images:
+  - name: timberio/vector
+    newTag: 0.30.0-distroless-libc
+namespace: cert-manager
 patches:
   - path: patches/add_dns01_recursive_nameservers.yml
     target:
       kind: Deployment
       name: cert-manager
+  - path: patches/add_vector_sidecar.yml
   - path: patches/increase_replicas.yml
   - path: patches/remove_metrics_service.yml
 resources:
