--- a/kustomization/base/argo-cd/kustomization.yml
+++ b/kustomization/base/argo-cd/kustomization.yml
@@ -3,11 +3,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: argocd
+patches:
+  - path: patches/set_tracking_by_annotation.yml
 resources:
   - namespace.yml
   # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.7.3/manifests/ha/install.yaml
   - ingressroute.yml
   - serverstransport.yml
-patchesStrategicMerge:
-  - set_tracking_by_annotation.yml
