--- a/kustomization/overlays/test/argo-cd/kustomization.yml
+++ b/kustomization/overlays/test/argo-cd/kustomization.yml
@@ -2,14 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: argocd
+patches:
+  - path: patches/change_ingressroute_host.yml
+    target:
+      kind: IngressRoute
+      name: argocd-.*ingressroute
 resources:
   - ../../../base/argo-cd
-patchesJson6902:
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: argocd-ingressroute
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: argocd-https-redirect-ingressroute
