handle the fact that we have an overlays directory now for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -61,7 +61,8 @@
     },
     {
       "fileMatch": [
-        "^kustomization/.+/.+/kustomization\\.yml$"
+        "^kustomization/.+/.+/kustomization\\.yml$",
+        "^kustomization/.+/.+/.+/kustomization\\.yml$"
       ],
       "matchStrings": [
         "#\\s*renovate:\\sdatasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)(?:\\sversioning=(?<versioning>.*?))?\\n\\s+newTag: (?<currentValue>.*?)\\n",
