--- a/kustomization/overlays/test/traefik/kustomization.yml
+++ b/kustomization/overlays/test/traefik/kustomization.yml
@@ -2,18 +2,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - ../../../base/traefik
-patchesJson6902:
-  - path: set_debug_log_level.yml
+namespace: traefik
+patches:
+  - path: patches/change_ingressroute_host.yml
+    target:
+      kind: IngressRoute
+      name: traefik-dashboard-.*ingressroute
+  - path: patches/set_debug_log_level.yml
     target:
       kind: Deployment
       name: traefik-deployment
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: traefik-dashboard-ingressroute
-  - path: change_ingressroute_host.yml
-    target:
-      kind: IngressRoute
-      name: traefik-dashboard-https-redirect-ingressroute
+resources:
+  - ../../../base/traefik
