fix dynamic service finding for prometheus

--- a/kustomization/base/prometheus/prometheus.yml
+++ b/kustomization/base/prometheus/prometheus.yml
@@ -4,14 +4,9 @@ kind: Prometheus
 metadata:
   name: prometheus
 spec:
-  additionalScrapeConfigs:
-    key: additional-scrape-configs.yaml
-    name: additional-scrape-config-secret
   ruleSelector: {}
   serviceAccountName: prometheus-service-account
-  # This selector doesn't do anything, but is needed for `additionalScrapeConfigs` to work.
-  # Ideally, we'd set a ScrapeConfig, but that is not documented and I failed to get it to work.
   serviceMonitorSelector:
     matchLabels:
-      kubernetes.io/metadata.name: vector
+      app.kubernetes.io/name: vector
   version: v2.44.0
