use kustomize for vector helm charts, not argo-cd

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ roles/bertvv.bind/
 roles/mrlesmithjr.mariadb_galera_cluster/
 roles/mrlesmithjr.zfs/
 roles/nickjj.docker/
+
+# Helm chart expansion by kustomize.  This isn't the suggested way, but home-prod isn't prod.
+kustomization/**/charts
