prefer to keep aggregator pods apart from each other

--- a/kustomization/base/vector-aggregator/values.yml
+++ b/kustomization/base/vector-aggregator/values.yml
@@ -2,6 +2,19 @@
 fullnameOverride: aggregator
 role: Aggregator
 
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      # Seperate aggregator pods so if a host goes down, the service doesn't go down.
+      - podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/instance
+                operator: in
+                values:
+                  - vector-aggregator
+          topologyKey: kubernetes.io/hostname
+
 autoscaling:
   enabled: yes
   minReplicas: 2
