add required weight field for affinity

--- a/kustomization/base/vector-aggregator/values.yml
+++ b/kustomization/base/vector-aggregator/values.yml
@@ -14,6 +14,7 @@ affinity:
                 values:
                   - vector-aggregator
           topologyKey: kubernetes.io/hostname
+        weight: 100
 
 autoscaling:
   enabled: yes
