operator needs to be In, not in

--- a/kustomization/base/vector-aggregator/values.yml
+++ b/kustomization/base/vector-aggregator/values.yml
@@ -10,7 +10,7 @@ affinity:
           labelSelector:
             matchExpressions:
               - key: app.kubernetes.io/instance
-                operator: in
+                operator: In
                 values:
                   - vector-aggregator
           topologyKey: kubernetes.io/hostname
