--- a/group_vars/vyos_cloud.yml
+++ b/group_vars/vyos_cloud.yml
@@ -56,6 +56,7 @@ vyos_firewall_global__group:
       afi: ipv4
       members:
         - address: 10.1.0.0/24
+        - address: 10.10.0.0/24 # Migrating UNIFI stuff to MAN
   port_group:
     - name: DNS
       members:
