--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -9,6 +9,7 @@ resources:
   - application/argo-proj.yml
   - application/calico.yml
   - application/cert-manager.yml
+  - application/kube-vip.yml
   - application/longhorn.yml
   - application/mariadb-galera.yml
   - application/minio.yml
