Ignore engine and replica instance manager pods when draining
Ignore these when draining when performing an upgrade as there is an
issue with pod disruption budgets currently:
https://github.com/longhorn/longhorn/issues/5910

--- a/plays/kairos/upgrade.yml
+++ b/plays/kairos/upgrade.yml
@@ -90,6 +90,8 @@
         pod_selectors:
           - app!=csi-attacher
           - app!=csi-provisioner
+          - longhorn.io/instance-manager-type!=engine
+          - longhorn.io/instance-manager-type!=replica
     - name: Reboot
       ansible.builtin.reboot:
         pre_reboot_delay: 60 # seconds
