--- a/kustomization/base/kube-vip/daemonset.yml
+++ b/kustomization/base/kube-vip/daemonset.yml
@@ -38,7 +38,7 @@ spec:
         - name: vip_ddns
           value: "false"
         - name: svc_enable
-          value: "true"
+          value: "false"
         - name: vip_leaderelection
           value: "true"
         - name: vip_leaseduration
