--- a/kustomization/base/traefik/kustomization.yml
+++ b/kustomization/base/traefik/kustomization.yml
@@ -2,35 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-configMapGenerator:
-  - name: vector-config
-    files:
-      - configmap/vector.yml
-  - name: traefik-config
-    files:
-      - configmap/traefik.yml
-images:
-  - name: traefik
-    # renovate: datasource=github-releases depName=traefik/traefik
-    newTag: v2.10.1
-  - name: timberio/vector
-    newTag: 0.30.0-distroless-libc
+components:
+  - ../../components/traefik
 namespace: traefik
-patches:
-  - path: patches/add_vector_sidecar.yml
-    target:
-      kind: Deployment
-      name: traefik-deployment
 resources:
   - namespace.yml
-    # renovate: datasource=github-releases
-  - https://raw.githubusercontent.com/traefik/traefik/v2.10.1/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
-    # renovate: datasource=github-releases
-  - https://raw.githubusercontent.com/traefik/traefik/v2.10.1/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
-  - certificate.yml
   - ingressclass.yml
-  - serviceaccount.yml
-  - deployment.yml
-  - service.yml
   - middleware.yml
   - ingressroute.yml
