--- a/kustomization/overlays/test/purelb/kustomization.yml
+++ b/kustomization/overlays/test/purelb/kustomization.yml
@@ -2,7 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: purelb
+patches:
+  - path: patches/set_pool.yml
+    target:
+      name: default
+      kind: ServiceGroup
 resources:
   - ../../../base/purelb
-patchesStrategicMerge:
-  - set_pool.yml
