handle setting ips on other interfaces better

--- a/group_vars/kairos.yml
+++ b/group_vars/kairos.yml
@@ -12,8 +12,9 @@ certmanager_cloudflare_api_token: !vault |
 
 kairos_managed_networks:
   - name: man
-    address: "{{ common__ip_addresses | ansible.utils.ipv4 | first }}"
+    address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.10.0.0/24') | first }}"
     gateway: 10.10.0.1
     vlan_id: 10
   - name: home
+    address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.117.0.0/23') | first }}"
     vlan_id: 117
