prep for moving networks

--- a/group_vars/kairos.yml
+++ b/group_vars/kairos.yml
@@ -15,6 +15,10 @@ kairos_managed_networks:
     address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.10.0.0/24') | first }}"
     gateway: 10.10.0.1
     vlan_id: 10
+  - name: services
+    address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.11.0.0/23') | first }}"
+    # gateway: 10.11.0.1
+    vlan_id: 11
   - name: home
     address: "{{ common__ip_addresses | ansible.utils.ipaddr('10.117.0.0/23') | first }}"
     vlan_id: 117
